--- a/default.hbs
+++ b/default.hbs
@@ -9,12 +9,12 @@
 	<meta name="HandheldFriendly" content="True">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="shortcut icon" href="{{asset "/favicon.ico"}}">
+  <link rel="shortcut icon" href="{{asset "/favicon.png"}}">
 
   <link rel="stylesheet" href="{{asset "css/font-awesome.min.css"}}">
 	<link rel="stylesheet" href="{{asset "css/screen.css"}}">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:400,700%7CUbuntu:400,700">
-
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800|PT+Sans:700">
+	<link rel="stylesheet" href="{{asset "css/customize.css"}}">
 	<script>
 		{{> config}}
 	</script>
