--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -2,6 +2,9 @@
 	<div class="container f14">
 		<div class="col-md-6 column">
 			<div class="fine-print">
+				<div class="mb10">
+					<img src="/content/images/triber-symbol.svg" width="48px" height="48px" />
+				</div>
 				© 2017 All Rights Reserved Wishberry Online Services Pvt. Ltd.<br/>
 				(CIN: U74300MH2009PTC191803)<br/>
 				102/103 Matharu Arcade, Subhash Road, Vile Parle (E), Mumbai 400057.
