--- a/assets/css/customize.css
+++ b/assets/css/customize.css
@@ -5,6 +5,7 @@ body { font-family: 'Muli', Helvetica, Arial, sans-serif; font-size: 18px; line-
 
 #navigation-bar {border: none; background-color: rgba(255,255,255,0.9); box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);}
 
+h1, h2, h3, h4, h5, h6 {font-family: 'Muli';}
 .featured h2.entry-title { font-size: 36px; letter-spacing: -1px;}
 
 .post .entry-title { font-size: 26px;}
