--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -202,7 +202,7 @@ html {
 body {
   background-color: #fff;
   color: #333;
-  font-family: "Merriweather", serif;
+/*  font-family: "Merriweather", serif;*/
   font-size: 15px;
   line-height: 2;
   padding-top: 60px;
@@ -213,7 +213,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Ubuntu", sans-serif;
+/*  font-family: "Ubuntu", sans-serif;*/
   font-weight: 700;
   letter-spacing: 0.5px;
   line-height: 1.3;
@@ -1136,7 +1136,7 @@ textarea {
   background-color: #fff;
   border: 2px solid #e8e8e8;
   display: block;
-  font-family: "Ubuntu", sans-serif;
+/*  font-family: "Ubuntu", sans-serif;*/
   margin-bottom: 10px;
   padding: 0 15px;
   width: 100%;
@@ -1175,7 +1175,7 @@ select {
   -moz-appearance: none;
 }
 label {
-  font-family: "Ubuntu", sans-serif;
+/*  font-family: "Ubuntu", sans-serif;*/
   font-size: 12px;
 }
 button:focus,
@@ -1216,7 +1216,7 @@ button[type="submit"] {
   border: 0;
   color: #fff;
   display: inline-block;
-  font-family: "Ubuntu", sans-serif;
+/*  font-family: "Ubuntu", sans-serif;*/
   font-size: 13px;
   font-weight: 700;
   letter-spacing: 0.5px;
@@ -1431,7 +1431,7 @@ button[type="submit"]:hover {
 #navigation-bar .nav-list > .menu-item > a {
   color: #333;
   display: block;
-  font-family: "Ubuntu", sans-serif;
+/*  font-family: "Ubuntu", sans-serif;*/
   font-size: 14px;
   font-weight: 700;
   letter-spacing: 0.5px;
@@ -1515,7 +1515,7 @@ button[type="submit"]:hover {
   font-size: 30px;
 }
 #hero .hero-description {
-  font-family: "Ubuntu", sans-serif;
+/*  font-family: "Ubuntu", sans-serif;*/
   line-height: 1.7;
 }
 #hero .hero-description .fa {
@@ -1650,7 +1650,7 @@ button[type="submit"]:hover {
 }
 .post .entry-meta .right > span {
   display: inline-block;
-  font-family: "Ubuntu", sans-serif;
+/*  font-family: "Ubuntu", sans-serif;*/
   font-size: 13px;
   margin-top: 6px;
 }
@@ -1739,7 +1739,7 @@ button[type="submit"]:hover {
   color: #fff;
   display: inline-block;
   float: left;
-  font-family: "Ubuntu", sans-serif;
+/*  font-family: "Ubuntu", sans-serif;*/
   font-size: 12px;
   font-weight: 700;
   margin: 0 4px 4px 0;
@@ -1803,7 +1803,7 @@ button[type="submit"]:hover {
 #about-author .author-meta > span {
   color: #bfbfbf;
   display: inline-block;
-  font-family: "Ubuntu", sans-serif;
+/*  font-family: "Ubuntu", sans-serif;*/
   font-size: 14px;
   font-weight: 700;
   margin: 0 5px;
@@ -1865,7 +1865,7 @@ button[type="submit"]:hover {
   background-color: #bfbfbf;
   color: #fff;
   display: block;
-  font-family: "Ubuntu", sans-serif;
+/*  font-family: "Ubuntu", sans-serif;*/
   font-size: 12px;
   font-weight: 700;
   padding: 5px 12px;
@@ -1939,7 +1939,7 @@ button[type="submit"]:hover {
 }
 .widget ul li > a {
   color: #333;
-  font-family: "Ubuntu", sans-serif;
+/*  font-family: "Ubuntu", sans-serif;*/
 }
 .widget ul li > a:hover {
   color: #52b3d9;
@@ -1978,7 +1978,7 @@ button[type="submit"]:hover {
   color: #fff;
   display: block;
   float: left;
-  font-family: "Ubuntu", sans-serif;
+/*  font-family: "Ubuntu", sans-serif;*/
   font-size: 30px;
   line-height: 60px;
   text-align: center;
@@ -2005,7 +2005,7 @@ button[type="submit"]:hover {
   color: #52b3d9;
 }
 .widget.widget-posts-list .entry-date {
-  font-family: "Ubuntu", sans-serif;
+/*  font-family: "Ubuntu", sans-serif;*/
   font-size: 12px;
 }
 #mondo-media-feed {
@@ -2066,7 +2066,7 @@ button[type="submit"]:hover {
 #colophon {
   background-color: #333;
   color: #bfbfbf;
-  font-family: "Ubuntu", sans-serif;
+/*  font-family: "Ubuntu", sans-serif;*/
 }
 #colophon a {
   color: #52b3d9;
