--- a/partials/config.hbs
+++ b/partials/config.hbs
@@ -14,8 +14,8 @@ var mondoOptions = {
 		
 	],
 	'social_links': {
-		'twitter': 'https://twitter.com/',
-		'facebook': 'https://www.facebook.com/',
+		'twitter': 'https://twitter.com/Wishberry_in',
+		'facebook': 'https://www.facebook.com/wishberry.in',
 		'youtube': '',
 		'pinterest': '',
 		'dribbble': '',
@@ -32,7 +32,7 @@ var mondoOptions = {
 		'soundcloud': '',
 		'steam': '',
 		'twitch': '',
-		'vine': 'https://vine.co/',
-		'vk': 'http://vk.com/',
+		'vine': '',
+		'vk': '',
 	},
 }
