--- a/tag.hbs
+++ b/tag.hbs
@@ -3,8 +3,10 @@
 <div id="hero"{{#if tag.feature_image}} style="background-image: url('{{tag.feature_image}}')"{{/if}}>
 	<div id="hero-mask"></div>
 	<div class="hero-content">
-		<h1 class="hero-title"><i class="fa fa-tag"></i> {{tag.name}}</h1>
-		<div class="hero-description">{{tag.description}}</div>
+		<div class="container">
+			<h1 class="hero-title"><i class="fa fa-tag"></i> {{tag.name}}</h1>
+			<div class="hero-description">{{tag.description}}</div>
+		</div>
 	</div>
 </div>
 
