--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2581,3 +2581,35 @@ button[type="submit"]:hover {
     transform: rotate(360deg);
   }
 }
+
+
+.kg-bookmark-card {
+	position: relative;
+}
+.kg-bookmark-container {
+	position: relative;
+}
+.kg-bookmark-content {
+	position: relative;
+}
+.kg-bookmark-title {
+	position: relative;
+}
+.kg-bookmark-description {
+	position: relative;
+}
+.kg-bookmark-metadata {
+	position: relative;
+}
+.kg-bookmark-icon {
+	position: relative;
+}
+.kg-bookmark-author {
+	position: relative;
+}
+.kg-bookmark-publisher {
+	position: relative;
+}
+.kg-bookmark-thumbnail{
+	position: relative;
+}
