--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,13 +1,13 @@
 <header id="masthead">
 	<div id="navigation-bar" class="clearfix">
 		<div class="container">
-			{{#if @blog.logo}}<a href="{{@blog.url}}"><img class="brand-logo dark" src="{{@blog.logo}}" alt="{{@blog.title}}"></a>{{/if}}
+			{{#if @site.logo}}<a href="{{@site.url}}"><img class="brand-logo dark" src="{{@site.logo}}" alt="{{@site.title}}"></a>{{/if}}
 			<div id="mobile-nav-toggle" class="hidden-md hidden-lg">
 				<span class="bar"></span>
 				<span class="bar"></span>
 				<span class="bar"></span>
 			</div>
-			
+
 			<nav id="main-navigation">
 				<ul class="nav-list clearfix">
 					{{#foreach navigation}}
