--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -3,9 +3,9 @@
 		<div class="col-md-6 column">
 			<div class="fine-print">
 				<div class="mb10">
-					<img src="/content/images/triber-symbol.svg" width="48px" height="48px" />
+					<img src="s3://wishberry-new/wishberry-admin-logo.png" width="48px" height="48px" />
 				</div>
-				© 2017 All Rights Reserved Wishberry Online Services Pvt. Ltd.<br/>
+				© 2019 All Rights Reserved Wishberry Online Services Pvt. Ltd.<br/>
 				(CIN: U74300MH2009PTC191803)<br/>
 				102/103 Matharu Arcade, Subhash Road, Vile Parle (E), Mumbai 400057.
 				<br/>
@@ -15,9 +15,9 @@
 		<div class="col-md-2 column">
 			<h4 class="fw-b mb15 f16">ABOUT</h4>
 			<ul class="rte-styles tc-white fw-b">
-				<li class="mb10"><a href="/about" class="cursor block">About Triber</a></li>
-				<li class="mb10"><a href="/how-it-works" class="cursor block">How Triber Works</a></li>
-				<li class="mb10"><a href="/fees" class="cursor block">Pricing</a></li>
+				<li class="mb10"><a href="https://www.wishberry.in/how-it-works" class="cursor block">How it Works</a></li>
+				<li class="mb10"><a href="https://www.wishberry.in/crowdfunding-handbook" class="cursor block">Crowdfunding Guide</a></li>
+				<li class="mb10"><a href="https://www.wishberry.in/faqs" class="cursor block">FAQs</a></li>
 			</ul>
 		</div>
 		<div class="col-md-2 column">
