--- a/assets/css/customize.css
+++ b/assets/css/customize.css
@@ -49,7 +49,7 @@ ul.rte-styles { padding:0px; margin: 0;}
 .f24, h1 { font-size:24px}
 .f26 { font-size:26px}
 
-footer { background-color: #303030; color: white; border-bottom: 5px #EC0868 solid; padding: 40px;}
+footer { background-color: #303030; color: white; border-bottom: 5px #ff4200 solid; padding: 40px;}
 footer a { color: #fff; opacity: 0.6;}
 footer a:hover { color: #fff; opacity: 1;}
 footer .cat-links a {opacity: 0.6; color: #fff; background-color: transparent; border-color: #fff;}
